# uv-assignment

./: README.md
my-packaged-app/: README.md  pyproject.toml
my-packaged-app/src/my_packaged_app/: main.py
my-simple-app/: README.md  hello.py  main.py  pyproject.toml
