[project]
name = "my-packaged-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "TahaAkbarCheema", email = "tahaakbar.se@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
my-packaged-app = "my_packaged_app:main"           # Runs main() from __init__.py
my-packaged-app-main = "my_packaged_app.main:main" # Runs main() from main.py

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
